fix wrapping links in rules and regs

--- a/themes/flex/sass/base/_styles.sass
+++ b/themes/flex/sass/base/_styles.sass
@@ -415,6 +415,11 @@ body.page-node-2
     width: 100% !important;
     padding: 20px 40px !important;
     margin: 0 0 30px 0 !important;
+    white-space: pre-wrap;  
+    white-space: -moz-pre-wrap; 
+    white-space: -pre-wrap;     
+    white-space: -o-pre-wrap;    
+    word-wrap: break-word; 
     @include media($desktop2) 
       width: 100% !important;
       padding: 20px 40px !important;
